src/components/sections/CTA/CTA.module.css
.CTAimg {
    background-image: url("/src/assets/images/CTAImage.svg");
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 750px;
    width: 100%;
    margin-top: 6.94rem;
  }

.CTA__content {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: flex-start;
    max-width: 1232px;
    margin-left: 16px;
    margin-right: 16px;
  }
  
  .text ,.text__jump {
    font-family: Inter;
    font-size: 4rem;
    line-height: 4.5rem;
    font-style: normal;
    font-weight: 700;
    position: relative;
    color: white;
    z-index: 0;
  }

  .text__jump{
    position: relative;
    color: #4842FB;
  }
  
  .text__paragraph{
    color: #FFF;
    font-family: Poppins;
    font-size: 1.25rem;
    font-style: normal;
    font-weight: 450;
    line-height: 140%;
    width: 56%;
    margin-top: 1.56rem;
  }

  .beDealerButton {
    background-color: #d3ff3c;
    margin-top: 7.56rem;
    padding: 18px 34px;
    border-radius: 20px;
    border: none;
    font-family: Poppins;
    font-weight: 500;
    font-size: 1.25rem;
    line-height: 140%;
    font-style: normal;
  }
  
  .backLetters{
    background-color: #D3FF3C;
    height: 4.625rem;
    left: -0.5rem;
    position: absolute;
    z-index: -1;
    margin-top: 0.3rem;
    width: 102%;
    transform: rotate(0.447deg);
}

@media (max-width: 768px) {
  .CTAimg{
    background-image: url("/src/assets/images/CTAImageMobile.svg");
  }

  .text ,.text__jump {
    font-size: 2.5rem;
    letter-spacing: -0.08rem;
    line-height: 3rem;
    margin: 0;
    padding: 0;
  }

  .text__paragraph{
    font-size: 0.875rem;
    line-height: 1.225rem;
    width: 100%;
    margin: 0;
    padding: 0;
  }

  .backLetters{
    height: 2.875rem;
  }

  .backTop {
    width: 107%;
    margin-top: 0.3rem;
    transform: rotate(1.166deg);
  }
  
  .backBottom {
    width: 108%;
    margin-top: 0.2rem;
    transform: rotate(-0.942deg);
  }
  
  .beDealerButton{
    padding: 1.125rem 1.5rem;
    font-size: 1rem;
    line-height: 1.4rem;
  }
}

